--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,10 @@
 @import url(../vendor/normalize.css);
+@import url(../fonts/fonts.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/link/link.css);
+@import url(../blocks/header/__image/header__logo.css);
+@import url(../blocks/header/__links/header__links.css);
+@import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/content/content.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/intro/intro.css);
