--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -3,4 +3,5 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  background: #2A2C2F;
 }
