--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -1,9 +1,9 @@
 .header__links {
   margin: 0;
-  padding: 0;
+  padding:7px 0 0;
   display: flex;
   flex-direction: row;
   column-gap: 18px;
   list-style: none;
-  align-items: flex-end;
+  align-self: center;
 }
