--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,9 +6,10 @@
 
 @media (max-width : 320px) {
   .lead__subtitle {
-    margin: 16px 16px 40px;  
+    margin: 17px 16px 40px;  
     font-style: 1em;
     line-height: 1.25;
     font-weight: 400;
+    letter-spacing: 0.15px;
   }
 }
