--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,9 +4,5 @@
   display: flex;
   justify-content: space-between;
   border: 0;
-}
-
-@media (max-width : 320px) {
-  .header {
-    padding: 16px 16px 8px;  }
+  padding: 16px 16px 8px;
 }
