--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,10 +1,5 @@
 .intro {
   margin: 0;
-  padding: 0;
   color: #fff;
-}
-
-@media (max-width : 320px) {
-  .intro {
-    padding: 0 0 64px;  }
+  padding: 0 0 64px;
 }
