--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,10 +1,5 @@
 .lead {
   margin: 0;
-  padding: 0;
   color: #fff;
-} 
-
-@media (max-width : 320px) {
-  .lead {
-    padding: 40px 0 64px;  }
+  padding: 40px 0 64px;
 }
