--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,13 +1,8 @@
 .place__paragraph {
-  margin: 0;
   padding: 0;
-}
-
-@media (max-width : 320px) {
-  .place__paragraph {
-    margin:0 16px;
-    font-weight: 400;
-    font-size: 1em;
-    line-height: 1.63;
-  }
+  border: 0;
+  margin:0 16px;
+  font-weight: 400;
+  font-size: 1em;
+  line-height: 1.63;
 }
