--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -2,10 +2,6 @@
   margin: 0;
   padding: 0;
   display: grid;
-}
-
-@media (max-width : 320px) {
-  .place__paragraphs {
-  row-gap: 25px;
-  }
+  border: 0;
+  row-gap: 26px;
 }
