--- a/blocks/place/__website/__url-heading/place__website__url-heading.css
+++ b/blocks/place/__website/__url-heading/place__website__url-heading.css
@@ -1,17 +1,11 @@
 .place__website__url-heading {
-  margin: 0;
   padding: 0;
-  bottom: 0;
+  border: 0;
   color: #AAAAAA;
-}
-
-@media (max-width : 320px) {
-  .place__website__url-heading {
-    margin: 0 0 12px;
-    font-weight: 400;
-    font-size: 0.75em;
-    line-height: 1;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-  }
+  margin: 0 0 12px;
+  font-weight: 400;
+  font-size: 0.75em;
+  line-height: 1;
+  letter-spacing: 2px;
+  text-transform: uppercase;
 }
