--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,11 +1,5 @@
 .place__website {
-  margin: 0;
+  margin: 0 16px;
   padding: 0;
-  bottom: 0;
-}
-
-@media (max-width : 320px) {
-  .place__website {
-    margin: 0 16px;
-  }
+  border: 0;
 }
