--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,11 @@
 .footer {
-  margin: 0;
+  min-height: 310px;
+  margin: 0 16px 24px;
+  padding: 0;
   background: #2A2C2F;
+  color:#fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  
 }
