--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,4 +1,4 @@
-.cover__background-link {
+.cover__background {
   min-height: 200px;
   margin: 0;
   padding: 0;
@@ -13,7 +13,7 @@
   z-index: 1;
 }
 
-.cover__background-link::before {
+.cover__background::before {
   content: "";
   background: #2A2C2F;
   opacity: 0.3;
@@ -26,6 +26,6 @@
   z-index: 2;
 }
 
-.cover__background-link:hover::before {
+.cover__background:hover::before {
   opacity: 0.8;
 }
