--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -5,7 +5,7 @@
   color: #fff;
   text-decoration: none;
   box-sizing: border-box;
-  background-image: url("../../../images/cover__background.png");
+  background-image: url(../../../images/cover__background.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -23,7 +23,7 @@
   left: 0;
   right: 0;
   transition: 0.5s;
-  z-index: 2;
+  z-index: -1;
 }
 
 .cover__background:hover::before {
