added media query 786px

--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -29,3 +29,10 @@
 .cover__background:hover::before {
   opacity: 0.8;
 }
+
+@media (min-width: 321px) and (max-width: 786px) {
+  .cover__background {
+    min-height: 480px;
+    width: 100%;
+  }
+}
