--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,7 +3,16 @@
   padding: 0;
   text-align: center;
   margin: 16px 16px 33px;  
-  font-size: 0.875em;
+  font-size: 14px;
   line-height: 1.14;
   font-weight: 400;
+  }
+
+  @media (min-width: 321px) and (max-width: 786px) {
+    .cover__subtitle {
+      max-width: 360px;
+      margin: 32px auto 115px;  
+      font-size: calc((100vw - 321px)/(786 - 321)*(18 - 14) + 14.16px);
+      line-height: 1.22;
+    }
   }
