--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -7,3 +7,9 @@
   justify-content: center;
   color: #fff;
 }
+
+@media (min-width: 321px) and (max-width: 786px) {
+  .cover {
+    padding: 0 0 88px;
+  }
+}
