--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,3 +3,11 @@
   line-height: 1;
   margin: 0;
 }
+
+
+@media (min-width: 691px) and (max-width: 786px) {
+  .footer__copyright {
+    line-height: 1.14;
+    padding: 2px 0 0;
+  }
+}
