--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -7,3 +7,10 @@
   column-gap: 18px;
   list-style: none;
 }
+
+@media (min-width: 691px) and (max-width: 786px) {
+  .footer__links {
+    flex-direction: row;
+    min-height: max-content;
+  }
+}
