--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -9,3 +9,11 @@
   justify-content: space-between;
   
 }
+
+@media (min-width: 691px) and (max-width: 786px) {
+  .footer {
+    margin: 0 24px 24px;
+    flex-direction: row;
+    min-height: max-content;
+  }
+}
