--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,3 +3,9 @@
   padding: 0;
   max-width: 49%;
 }
+
+@media (min-width: 321px) and (max-width: 786px) {
+  .header__logo {
+    max-width: 55%;
+  }
+}
