--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,3 +6,9 @@
   border: 0;
   padding: 16px 16px 8px;
 }
+
+@media (min-width: 321px) and (max-width: 786px) {
+  .header {
+    padding: 28px 24px 8px;
+  }
+}
