--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,7 +2,7 @@
   padding: 0;
   text-decoration: none;
   list-style: none;
-  margin: 0 16px;
+  margin: 0;
   font-weight: 400;
   font-size: 0.75em;
   line-height: 1.5;
