--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,7 +1,7 @@
 .intro__text {
   padding: 40px 0 33px;
-  margin:0 16px;
+  margin:0;
   font-weight: 400;
-  font-size: 1em;
+  font-size: 16px;
   line-height: 1.63;
 }
