--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,7 +1,14 @@
 .intro__title {
   padding: 0;
-  margin: 0 16px;
+  margin: 0;
   font-weight: 900;
-  font-size: 2em;
+  font-size: 32px;
   line-height: 1.09;
+}
+
+@media (min-width: 321px) and (max-width: 786px) {
+  .intro__title {
+    font-size: calc((100vw - 321px)/(786 - 321)*(54 - 32) + 32.86px);
+    line-height: 1.07;
+  }
 }
