--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,5 +1,12 @@
 .intro {
-  margin: 0;
+  margin: 0 16px;
   color: #fff;
   padding: 0 0 64px;
+}
+
+@media (min-width: 321px) and (max-width: 786px) {
+  .intro {
+    margin: 0 24px;
+    padding: 0 0 88px;
+  }
 }
