--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -2,7 +2,13 @@
   padding: 0;
   text-transform: uppercase;
   letter-spacing: 1.5px;
-  margin: 4px 16px 0;  
+  margin: 8px 16px 0;  
   font-size: 0.625em;
   line-height: 1.4;
+}
+
+@media (min-width: 321px) and (max-width: 786px) {
+  .lead__caption {
+    margin: 6px 24px 0;
+  }
 }
