--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -2,7 +2,17 @@
   padding: 0;
   text-align: center;
   margin: 17px 16px 40px;  
-  font-size: 1em;
+  font-size: 16px;
   line-height: 1.25;
   font-weight: 400;
+}
+
+@media (min-width: 321px) and (max-width: 786px) {
+  .lead__subtitle {
+    margin: 0 auto;
+    padding: 32px 0 56px;
+    font-size: calc((100vw - 321px)/(786 - 321)*(30 - 16) + 16.55px);
+    line-height: 1.2;
+    max-width: 600px;
+  }
 }
