--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,3 +4,12 @@
   display: grid;
   row-gap: 12px; 
 }
+
+@media (min-width: 321px) and (max-width: 786px) {
+  .photo-grid {
+    margin: 0 24px;
+    padding: 0 0 88px;
+    gap: 16px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
