--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,3 +6,9 @@
   font-size: 1em;
   line-height: 1.63;
 }
+
+@media (min-width: 321px) and (max-width: 786px) {
+  .place__paragraph {
+    margin: 0;
+  }
+}
