--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -3,6 +3,14 @@
   border: 0;
   margin: 0 16px;
   font-weight: 900;
-  font-size: 2em;
+  font-size: 32px;
   line-height: 1.09;
+}
+
+@media (min-width: 321px) and (max-width: 786px) {
+  .place__title {
+    margin: 0;
+    max-width: 330px;
+    font-size: calc((100vw - 321px)/(786 - 321)*(42 - 32) + 32.39px);
+  }
 }
