--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -7,3 +7,11 @@
   flex-direction: column;
   color: #fff;
 }
+
+@media (min-width: 321px) and (max-width: 786px) {
+  .places {
+    margin: 0 24px;
+    padding: 0 0 88px;
+    row-gap: 71px; 
+  }
+}
