added media query 1024px

--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -36,3 +36,10 @@
     width: 100%;
   }
 }
+
+@media (min-width: 321px) and (max-width: 786px) {
+  .cover__background {
+    min-height: 640px;
+    width: 100%;
+  }
+}
