--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -16,3 +16,12 @@
       line-height: 1.22;
     }
   }
+
+  @media (min-width: 787px) and (max-width: 1024px) {
+    .cover__subtitle {
+      max-width: 360px;
+      margin: 32px auto 195px;  
+      font-size: 18px;
+      line-height: 1.22;
+    }
+  }
