--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -15,3 +15,11 @@
     letter-spacing: 0.1px;  
   }
 }
+
+@media screen and (min-width: 787px) {
+  .footer__link {
+    font-size: 16px;
+    line-height: 1.12;
+    letter-spacing: 0.1px;  
+  }
+}
