--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -8,7 +8,7 @@
   list-style: none;
 }
 
-@media (min-width: 691px) and (max-width: 786px) {
+@media screen and (min-width: 691px) {
   .footer__links {
     flex-direction: row;
     min-height: max-content;
