--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,4 +1,4 @@
-.header__link {
+.header__lang-link {
   margin: 0;
   padding: 0;
   color: #fff;
@@ -9,8 +9,15 @@
 }
 
 @media (min-width: 321px) and (max-width: 786px) {
-  .header__link {
+  .header__lang-link {
     font-size: calc((100vw - 321px)/(786 - 321)*(24 - 18) + 18px);
+    line-height: 1.17;
+  }
+}
+
+@media screen and (min-width: 787px) {
+  .header__lang-link {
+    font-size: 24px;
     line-height: 1.17;
   }
 }
