--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -12,3 +12,9 @@
     padding: 28px 24px 8px;
   }
 }
+
+@media (min-width: 787px) and (max-width: 1024px) {
+  .header {
+    padding: 28px 48px 8px;
+  }
+}
