--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,3 +5,10 @@
   font-size: 16px;
   line-height: 1.63;
 }
+
+@media screen and (min-width:787px) {
+  .intro__text {
+    max-width: 690px;
+    line-height: 1.62;
+  }
+}
