--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -12,3 +12,10 @@
     line-height: 1.07;
   }
 }
+
+@media screen and (min-width: 787px) {
+  .intro__title {
+    font-size: 54px;
+    line-height: 1.07;
+  }
+}
