--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -10,3 +10,10 @@
     padding: 0 0 88px;
   }
 }
+
+@media (min-width: 787px) and (max-width: 1024px) {
+  .intro {
+    margin: 0 48px;
+    padding: 0 0 92px;
+  }
+}
