--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -16,3 +16,10 @@
     line-height: 1.04;
   }
 }
+
+@media screen and (min-width: 787px) {
+  .lead__title {
+    font-size: 96px;
+    line-height: 1.04;
+  }
+}
