--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -12,3 +12,10 @@
     margin: 0;
   }
 }
+
+@media screen and (min-width: 787px) {
+  .place__paragraph {
+    margin: 0;
+    font-size: 1.125em;
+  }
+}
