--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,9 +4,10 @@
   border: 0;
 }
 
-@media (min-width: 321px) and (max-width: 786px) {
+@media screen and (min-width: 321px) {
   .place__website {
     margin: 0;
     align-self: end;
   }
 }
+
