--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -13,3 +13,11 @@
     grid-template-columns: 1fr minmax(min-content, 352px);
   }
 }
+
+@media (min-width: 787px) and (max-width: 1024px) {
+  .place {
+    row-gap: 47px;
+    column-gap: 32px;
+    grid-template-columns: 1fr minmax(min-content, 456px);
+  }
+}
