--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -15,3 +15,10 @@
     row-gap: 71px; 
   }
 }
+@media screen and (min-width: 787px) {
+  .places {
+    margin: 0 48px;
+    padding: 0 0 92px;
+    row-gap: 80px; 
+  }
+}
