--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -37,9 +37,9 @@
   }
 }
 
-@media (min-width: 321px) and (max-width: 786px) {
+@media screen and (min-width: 1025px) {
   .cover__background {
-    min-height: 640px;
+    min-height: 740px;
     width: 100%;
   }
 }
