--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -17,11 +17,17 @@
     }
   }
 
-  @media (min-width: 787px) and (max-width: 1024px) {
+  @media screen and (min-width: 787px) {
     .cover__subtitle {
       max-width: 360px;
       margin: 32px auto 195px;  
       font-size: 18px;
       line-height: 1.22;
+    }
+  }
+
+  @media screen and (min-width: 1025px) {
+    .cover__subtitle {
+      margin: 32px auto 245px;  
     }
   }
