--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -17,3 +17,10 @@
     padding: 0 0 92px;
   }
 }
+
+@media screen and (min-width: 1025px) {
+  .intro {
+    margin: 0 148px;
+    padding: 0 0 92px;
+  }
+}
