--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -19,6 +19,8 @@
 
 @media screen and (min-width: 787px) {
   .lead__title {
+    margin: 0 auto;
+    max-width: 720px;
     font-size: 96px;
     line-height: 1.04;
   }
