--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -17,3 +17,10 @@
   margin: 0 48px;
  }
 }
+
+@media screen and (min-width: 1025px) {
+  .lead {
+    padding: 48px 0 92px;
+    margin: 0 148px;
+  }
+}
