--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -4,4 +4,6 @@
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   background: #2A2C2F;
+  max-width: 1280px;
+  margin: 0 auto;
 }
