--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -8,18 +8,16 @@
   font-weight: 400;
 }
 
-@media (min-width: 691px) and (max-width: 786px) {
+@media screen and (min-width: 691px) {
   .footer__link {
     font-size: calc((100vw - 321px)/(786 - 321)*(16 - 24) + 23.7px);
     line-height: 1.12;
-    letter-spacing: 0.1px;  
+    letter-spacing: 0.1px;
   }
 }
 
 @media screen and (min-width: 787px) {
   .footer__link {
     font-size: 16px;
-    line-height: 1.12;
-    letter-spacing: 0.1px;  
   }
 }
