fixed comments after code review

--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,31 +1,24 @@
 .cover__title {
+  max-width: 288px;
   padding: 0;
   text-align: center;
-  margin: 33px 16px 0;
+  margin: 0 auto;
   font-weight: 900;
   font-size: 32px;
   line-height: 1.09;
 }
 
-@media (min-width: 321px) and (max-width: 786px) {
+@media screen and (min-width: 321px) {
   .cover__title {
-    margin: 115px 16px 0;
-    font-size: calc((100vw - 321px)/(786 - 321)*(72 - 32) + 33.6px);
+    max-width: 560px;
+    font-size: calc((100vw - 321px)/(768 - 321)*(72 - 32) + 32px);
     line-height: 1.06;
   }
 }
 
-@media screen and  (min-width: 787px) {
+@media screen and (min-width: 768px) {
   .cover__title {
-    margin: 195px 48px 0;
     font-size: 72px;
     line-height: 1.07;
-  }
-}
-
-@media screen and (min-width: 1025px) {
-  .cover__title {
-    margin:243px auto 0;
-    max-width: 560px;
   }
 }
