--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,5 +1,6 @@
 .cover__background {
   min-height: 200px;
+  width: 100%;
   margin: 0;
   padding: 0;
   color: #fff;
@@ -11,6 +12,10 @@
   background-size: cover;
   position: relative;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .cover__background::before {
@@ -30,16 +35,19 @@
   opacity: 0.8;
 }
 
-@media (min-width: 321px) and (max-width: 786px) {
+@media (min-width: 321px) and (max-width: 768px) {
   .cover__background {
     min-height: 480px;
-    width: 100%;
+  }
+}
+@media screen and (min-width: 769px) {
+  .cover__background {
+    min-height: 640px;
   }
 }
 
 @media screen and (min-width: 1025px) {
   .cover__background {
     min-height: 740px;
-    width: 100%;
   }
 }
