--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,32 +2,23 @@
   max-width: 279px;
   padding: 0;
   text-align: center;
-  margin: 16px 16px 33px;
+  margin: 16px auto 0;
   font-size: 14px;
   line-height: 1.14;
   font-weight: 400;
   }
 
-  @media (min-width: 321px) and (max-width: 786px) {
+  @media screen and (min-width: 321px) {
     .cover__subtitle {
       max-width: 360px;
-      margin: 32px auto 115px;
-      font-size: calc((100vw - 321px)/(786 - 321)*(18 - 14) + 14.16px);
+      margin: 32px auto 0;
+      font-size: calc((100vw - 321px)/(768 - 321)*(18 - 14) + 14px);
       line-height: 1.22;
     }
   }
 
-  @media screen and (min-width: 787px) {
+  @media screen and (min-width: 769px) {
     .cover__subtitle {
-      max-width: 360px;
-      margin: 32px auto 195px;
       font-size: 18px;
-      line-height: 1.22;
-    }
-  }
-
-  @media screen and (min-width: 1025px) {
-    .cover__subtitle {
-      margin: 32px auto 245px;
     }
   }
