--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,11 +1,11 @@
 .photo-grid {
   margin: 0 16px;
   padding: 0 0 64px;
-  display: grid;
+  display: flex;
   row-gap: 12px;
 }
 
-@media (min-width: 321px) and (max-width: 786px) {
+@media (min-width: 321px) and (max-width: 768px) {
   .photo-grid {
     margin: 0 24px;
     padding: 0 0 88px;
@@ -14,7 +14,7 @@
   }
 }
 
-@media (min-width: 787px) and (max-width: 1024px) {
+@media screen and (min-width: 769px) {
   .photo-grid {
     margin: 0 48px;
     padding: 0 0 92px;
@@ -25,9 +25,7 @@
 
 @media screen and (min-width: 1025px) {
   .photo-grid {
-  margin: 0 48px;
-  padding: 0 0 92px;
-  gap: 14px;
+  gap: 16px;
   grid-template-columns: repeat(4, 1fr);
   }
 }
