--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -7,16 +7,22 @@
   row-gap: 26px;
 }
 
-@media (min-width: 321px) and (max-width: 786px) {
+@media (min-width: 321px) and (max-width: 768px) {
   .place__paragraphs {
-    row-gap: 25px;
+    row-gap: 24px;
   }
 }
 
-@media screen and (min-width: 787px) {
+@media screen and (min-width: 769px) {
   .place__paragraphs {
-    row-gap: 24px;
+    row-gap: 28px;
     align-items: start;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .place__paragraphs {
+    row-gap: 25px;
   }
 }
 
