--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,5 +1,5 @@
 .root {
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
